Set size medium same as large to avoid overlapping problems

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -92,7 +92,7 @@ $typography: (
 
 $breakpoints: (
   small: 32rem,
-  medium: 65rem,
+  medium: 68rem,
   large: 68rem,
   xlarge: 72rem
 );
